feat: wallpaper-color-sync related

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -63,3 +63,5 @@ mark1_background #ff5555
 # Splits/Windows
 active_border_color #f8f8f2
 inactive_border_color #6272a4
+
+include ~/.cache/wal/colors-kitty.conf
