--- a/dots/rofi-commands.yaml
+++ b/dots/rofi-commands.yaml
@@ -42,7 +42,7 @@
   command: $HOME/.dotfiles/scripts/rofi-bluetooth.sh
 
 - name: "Wallpaper Selector"
-  command: sxiv $HOME/Pictures/Wallpapers
+  command: sxiv -t $HOME/Pictures/Wallpapers
 
 - name: "Show Current Date"
   command: dunstify -u critical "Current Date" "$(date)"
