--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -64,4 +64,4 @@ mark1_background #ff5555
 active_border_color #f8f8f2
 inactive_border_color #6272a4
 
-include ~/.cache/wal/colors-kitty.conf
+# include ~/.cache/wal/colors-kitty.conf
