--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # config
 
 background_opacity 0.98
-font_family Iosevka Nerd Font
+font_family Iosevka NF 
 window_padding_width 12
 font_size 12
 
@@ -10,10 +10,8 @@ font_size 12
 enable_audio_bell no
 
 foreground            #f8f8f2
-# background            #161616
-# color0                #161616
-background            #000000
-color0                #000000
+background            #151515
+color0                #151515
 selection_foreground  #ffffff
 selection_background  #44475a
 
