sync: lol nvm we all hate windows

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,9 @@
 # config
 
+linux_display_server x11
+
 background_opacity 0.98
-font_family Iosevka NF 
+font_family IosevkaTerm NF 
 window_padding_width 12
 font_size 12
 
