--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -6,7 +6,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
@@ -23,10 +22,7 @@ bind-key C-Space last-window
 set-option -g history-limit 5000
 set -g status-interval 1 # refresh the status line every second
 
-# pomodoro
-set -g @pomodoro_granularity 'on'
-set -g @pomodoro_repeat 'off' 
-set -g @pomodoro_notifications 'on'
+set -g default-terminal "tmux-256color"
 
 bind -r k select-pane -U 
 bind -r j select-pane -D 
