--- a/system/etc/modprobe.d/nvidia.conf
+++ b/system/etc/modprobe.d/nvidia.conf
@@ -1,2 +1,4 @@
-options nvidia "NVreg_EnableGpuFirmware=0"
+options nvidia-drm modeset=1
+options nvidia "NVreg_EnableGpuFirmware=0"  
 options nvidia "NVreg_DynamicPowerManagement=0x02"
+options nvidia NVreg_UsePageAttributeTable=1 NVreg_InitializeSystemMemoryAllocations=0
