sync: forgot what i did, but here it is

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -166,6 +166,8 @@
             "after": ["P"]
         },
     ],
-    "workbench.colorTheme": "One Dark Pro Monokai Darker",
+    "workbench.colorTheme": "Ayu Mirage",
+    "terminal.integrated.fontFamily": "monospace",
+    "errorLens.enabled": false,
 
 }
