--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,65 +3,64 @@
 linux_display_server x11
 
 background_opacity 0.95
-font_family IosevkaTerm NF 
-window_padding_width 6
+font_family CaskaydiaCove NF 
+# window_padding_width 6
 font_size 12
 
 # allow_remote_control yes
 # listen_on 
 enable_audio_bell no
 
-foreground            #f8f8f2
-background            #000000
-color0                #000000
-selection_foreground  #ffffff
-selection_background  #44475a
+# oxocarbon theme ported to kitty, https://github.com/hbjydev/oxocarbon-kitty
+# originally made by nyoom, https://github.com/nyoom-engineering/oxocarbon
 
-url_color #8be9fd
+foreground #dde1e6
+background #161616
+selection_foreground #f2f4f8
+selection_background #525252
 
-# black
-color8  #6272a4
+cursor #f2f4f8
+cursor_text_color #393939
 
-# red
-color1  #ff5555
-color9  #ff6e6e
+url_color #ee5396
+url_style single
 
-# green
-color2  #50fa7b
-color10 #69ff94
+active_border_color #ee5396
+inactive_border_color #ff7eb6
 
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
+bell_border_color #ee5396
 
-# blue
-color4  #bd93f9
-color12 #d6acff
+wayland_titlebar_color system
+macos_titlebar_color system
 
-# magenta
-color5  #ff79c6
-color13 #ff92df
+active_tab_foreground #161616
+active_tab_background #ee5396
+inactive_tab_foreground #dde1e6
+inactive_tab_background #393939
+tab_bar_background #161616
 
-# cyan
-color6  #8be9fd
-color14 #a4ffff
+color0 #262626
+color8 #393939
 
-# white
-color7  #f8f8f2
+color1 #ff7eb6
+color9 #ff7eb6
+
+color2  #42be65
+color10 #42be65
+
+color3  #82cfff
+color11 #82cfff
+
+color4  #33b1ff
+color12 #33b1ff
+
+color5  #ee5396
+color13 #ee5396
+
+color6  #3ddbd9
+color14 #3ddbd9
+
+color7  #dde1e6
 color15 #ffffff
-
-# Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
-
-# Splits/Windows
-active_border_color #f8f8f2
-inactive_border_color #6272a4
 
 # include ~/.cache/wal/colors-kitty.conf
