sync: config update

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 linux_display_server x11
 
 background_opacity 0.95
-font_family CaskaydiaCove NF 
+font_family Hack NF 
 # window_padding_width 6
 font_size 12
 
