--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -6,6 +6,7 @@ background_opacity 0.95
 font_family Hack NF 
 # window_padding_width 6
 font_size 12
+cursor_trail 1
 
 # allow_remote_control yes
 # listen_on 
@@ -19,7 +20,7 @@ background #161616
 selection_foreground #f2f4f8
 selection_background #525252
 
-cursor #f2f4f8
+cursor #0059ff
 cursor_text_color #393939
 
 url_color #ee5396
