sync: monthly push (december)

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -3,10 +3,10 @@
 linux_display_server x11
 
 background_opacity 0.95
-font_family Hack NF 
-# window_padding_width 6
+font_family CaskaydiaCove NF 
+window_padding_width 6
 font_size 12
-cursor_trail 1
+cursor_trail 3
 
 # allow_remote_control yes
 # listen_on 
@@ -20,7 +20,7 @@ background #161616
 selection_foreground #f2f4f8
 selection_background #525252
 
-cursor #0059ff
+cursor #00FF00
 cursor_text_color #393939
 
 url_color #ee5396
