sync: monthly push (february)

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,6 +7,7 @@ font_family CaskaydiaCove NF
 window_padding_width 6
 font_size 12
 cursor_trail 3
+cursor_trail_decay 0.1 0.4
 
 # allow_remote_control yes
 # listen_on 
