sync: monthly push (june)

--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -29,8 +29,12 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 bind-key b set-option status
+
 # source theme
-source-file ~/.dotfiles/dots/tmux.theme.conf
+set -g @plugin 'vaaleyard/tmux-dotbar'
+set -g @tmux-dotbar-right true
+set -g @tmux-dotbar-bg "#161616"
+# source-file ~/.dotfiles/dots/tmux.theme.conf
 
 # install tmux plugin manager if not exist
 if "test ! -d ~/.tmux/plugins/tpm" \
