sync: add fish and sync minor stuffs

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -57,6 +57,12 @@
       path: config/zathura
       force: true
 
+    # fish
+    ~/.config/fish:
+      create: true
+      path: config/fish
+      force: true
+
     # nm dmenu
     ~/.config/networkmanager-dmenu:
       create: true
