--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -1,7 +1,6 @@
 {
     "editor.lineNumbers": "relative",
     "workbench.startupEditor": "none",
-    "workbench.statusBar.visible": true,
     "workbench.activityBar.location": "hidden",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.fontFamily": "Iosevka Nerd Font",
@@ -10,7 +9,6 @@
     "editor.cursorBlinking": "solid",
     "workbench.productIconTheme": "fluent-icons",
     "editor.tabSize": 2,
-    "editor.minimap.enabled": false,
     "editor.renderWhitespace": "none",
     "editor.minimap.renderCharacters": false,
     "workbench.editor.tabSizingFixedMaxWidth": 100,
@@ -21,7 +19,7 @@
     "dart.hotReloadOnSave": "manual",
     "editor.wordWrap": "on",
     "zenMode.centerLayout": true,
-    "workbench.iconTheme": "ayu",
+    "workbench.iconTheme": "vscode-icons",
 
     "[blade]": {
         "editor.defaultFormatter": "shufo.vscode-blade-formatter"
@@ -139,6 +137,14 @@
             "before": [ "<C-p>" ],
             "commands": [ "workbench.action.quickOpen" ],
         },
+        {
+            "before": ["<leader>", ";"],
+            "commands": ["workbench.action.moveEditorLeftInGroup"]
+        },
+        {
+            "before": ["<leader>", "'"],
+            "commands": ["workbench.action.moveEditorRightInGroup"]
+        },
     ],
     
     // vim -- visual
@@ -181,27 +187,43 @@
             "after": ["P"]
         },
     ],
-    "workbench.colorTheme": "Serendipity Midnight Electric",
+    "workbench.colorTheme": "Moonlight II Italic",
     "terminal.integrated.fontFamily": "Iosevka Nerd Font",
     "errorLens.enabled": false,
-    "security.allowedUNCHosts": [
-        "wsl.localhost"
-    ],
-    "window.titleBarStyle": "native",
     "window.menuBarVisibility": "hidden",
     "github.copilot.nextEditSuggestions.enabled": true,
     "emmet.includeLanguages": {
     "blade": "html"
     },
-    "vscode-pets.petSize": "medium",
-    "vscode-pets.petColor": "warrior",
     "javascript.updateImportsOnFileMove.enabled": "always",
     "typescript.updateImportsOnFileMove.enabled": "always",
-    "window.commandCenter": false,
     "workbench.layoutControl.enabled": false,
     "workbench.sideBar.location": "right",
-    "editor.fontSize": 17,
+    "editor.fontSize": 16,
     "editor.stickyScroll.maxLineCount": 2,
     "window.density.editorTabHeight": "compact",
-    "phpParameterHint.onChange": false,
+    "workbench.editor.editorActionsLocation": "hidden",
+    "chat.commandCenter.enabled": false,
+    "window.commandCenter": false,
+    "breadcrumbs.enabled": false,
+    "workbench.tips.enabled": false,
+    "material-icon-theme.hidesExplorerArrows": true,
+    "workbench.tree.renderIndentGuides": "none",
+    "workbench.tree.indent": 16,
+    "explorer.decorations.badges": false,
+    "git.decorations.enabled": false,
+    "window.titleBarStyle": "native",
+    "laravel-pint.enable": true,
+    "editor.formatOnSave": true,
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "workbench.navigationControl.enabled": false,
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "vscode_custom_css.imports": [
+        ""
+    ],
+    "editor.minimap.enabled": false
 }
