sync: editor settings (vscode and neovim)

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -225,5 +225,6 @@
     "vscode_custom_css.imports": [
         ""
     ],
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "vsicons.dontShowNewVersionMessage": true
 }
