tmux: support for wsl or any env outhere for coloring

--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -22,6 +22,7 @@ set-option -g history-limit 5000
 set -g status-interval 1 # refresh the status line every second
 
 set -g default-terminal "tmux-256color"
+set -as terminal-features ",xterm-256color:RGB"
 
 bind -r k select-pane -U 
 bind -r j select-pane -D 
